base/apps/umvc3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umvc3
  labels:
    app: umvc3
spec:
  type: ClusterIP
  selector:
    app: umvc3
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
